updates 2 column to new header and fixes css output

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,17 @@
       "name": "Homepage-Spring-Update",
       "path": "",
       "files": {
+        "3f2018e1": {
+          "id": "3f2018e1",
+          "path": "springhome_index.html",
+          "output": "springhome_index.html",
+          "name": "springhome_index.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
         "c5119d58": {
           "id": "c5119d58",
           "path": "50years85kAlumni_bug.png",
@@ -39,6 +50,22 @@
           "imported": false,
           "parents": [],
           "type": "sass"
+        },
+        "28406d04": {
+          "id": "28406d04",
+          "path": "home2016.css",
+          "output": "home2016.css",
+          "name": "home2016.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         },
         "0d537d8c": {
           "id": "0d537d8c",
@@ -82,6 +109,238 @@
           "parents": [],
           "type": "css"
         },
+        "bf2493a7": {
+          "id": "bf2493a7",
+          "path": "2column.html",
+          "output": "2column.html",
+          "name": "2column.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "306dc1b3": {
+          "id": "306dc1b3",
+          "path": "newsroom.html",
+          "output": "newsroom.html",
+          "name": "newsroom.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "d28aa1c9": {
+          "id": "d28aa1c9",
+          "path": "media/assets/msudenver_logo.png",
+          "output": "media/assets/msudenver_logo.png",
+          "name": "msudenver_logo.png",
+          "category": "IMAGE",
+          "size": 8562,
+          "type": "png",
+          "initialSize": 8562,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ced83014": {
+          "id": "ced83014",
+          "path": "app/ContentTypes/_AdmissionsStyles.scss",
+          "output": "app/ContentTypes/_AdmissionsStyles.css",
+          "name": "_AdmissionsStyles.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
+          "type": "sass"
+        },
+        "948619a6": {
+          "id": "948619a6",
+          "path": "app/ContentTypes/_HighlightBox.scss",
+          "output": "app/ContentTypes/_HighlightBox.css",
+          "name": "_HighlightBox.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
+          "type": "sass"
+        },
+        "08fd0c18": {
+          "id": "08fd0c18",
+          "path": "app/ContentTypes/_TableStyles.scss",
+          "output": "app/ContentTypes/_TableStyles.css",
+          "name": "_TableStyles.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
+          "type": "sass"
+        },
+        "37ab0c91": {
+          "id": "37ab0c91",
+          "path": "app/ContentTypes/_hero.scss",
+          "output": "app/ContentTypes/_hero.css",
+          "name": "_hero.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
+          "type": "sass"
+        },
+        "7263355e": {
+          "id": "7263355e",
+          "path": "app/ContentTypes/_navmenu.scss",
+          "output": "app/ContentTypes/_navmenu.css",
+          "name": "_navmenu.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "0115b650",
+            "cd1513b7"
+          ],
+          "type": "sass"
+        },
+        "5ec38b25": {
+          "id": "5ec38b25",
+          "path": "app/ContentTypes/_newsroom.scss",
+          "output": "app/ContentTypes/_newsroom.css",
+          "name": "_newsroom.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "0115b650",
+            "cd1513b7"
+          ],
+          "type": "sass"
+        },
+        "ab5ed3ce": {
+          "id": "ab5ed3ce",
+          "path": "app/ContentTypes/_oldhomepage.scss",
+          "output": "app/ContentTypes/_oldhomepage.css",
+          "name": "_oldhomepage.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "06456fba": {
+          "id": "06456fba",
+          "path": "app/ContentTypes/content.scss",
+          "output": "app/ContentTypes/content.css",
+          "name": "content.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "0115b650",
+            "cd1513b7"
+          ],
+          "type": "sass"
+        },
+        "79258a5d": {
+          "id": "79258a5d",
+          "path": "app/ContentTypes/_callstoaction.scss",
+          "output": "app/ContentTypes/_callstoaction.css",
+          "name": "_callstoaction.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b4144c5e"
+          ],
+          "type": "sass"
+        },
+        "8a21f0ba": {
+          "id": "8a21f0ba",
+          "path": "home2016_1.css",
+          "output": "home2016_1-dist.css",
+          "name": "home2016_1.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
         "8e525fc9": {
           "id": "8e525fc9",
           "path": "presspage.css",
@@ -98,22 +357,11 @@
           "parents": [],
           "type": "css"
         },
-        "306dc1b3": {
-          "id": "306dc1b3",
-          "path": "newsroom.html",
-          "output": "newsroom.html",
-          "name": "newsroom.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "bf2493a7": {
-          "id": "bf2493a7",
-          "path": "2column.html",
-          "output": "2column.html",
-          "name": "2column.html",
+        "261764a5": {
+          "id": "261764a5",
+          "path": "springhome_index_060816.html",
+          "output": "springhome_index_060816.html",
+          "name": "springhome_index_060816.html",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
@@ -123,7 +371,7 @@
         "0115b650": {
           "id": "0115b650",
           "path": "app/_main2016.scss",
-          "output": "app/_main2016.css",
+          "output": "main2016.css",
           "name": "_main2016.scss",
           "category": "CSS",
           "autoCompile": true,
@@ -133,7 +381,7 @@
           "compass": false,
           "fullCompass": false,
           "outputStyle": "expanded",
-          "customOutput": false,
+          "customOutput": true,
           "imported": false,
           "parents": [],
           "type": "sass"
@@ -143,80 +391,6 @@
           "path": "app/_presspage.scss",
           "output": "app/_presspage.css",
           "name": "_presspage.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "ced83014": {
-          "id": "ced83014",
-          "path": "app/ContentTypes/_AdmissionsStyles.scss",
-          "output": "app/ContentTypes/_AdmissionsStyles.css",
-          "name": "_AdmissionsStyles.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "79258a5d": {
-          "id": "79258a5d",
-          "path": "app/ContentTypes/_CallsToAction.scss",
-          "output": "app/ContentTypes/_CallsToAction.css",
-          "name": "_CallsToAction.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "b4144c5e"
-          ],
-          "type": "sass"
-        },
-        "948619a6": {
-          "id": "948619a6",
-          "path": "app/ContentTypes/_HighlightBox.scss",
-          "output": "app/ContentTypes/_HighlightBox.css",
-          "name": "_HighlightBox.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "08fd0c18": {
-          "id": "08fd0c18",
-          "path": "app/ContentTypes/_TableStyles.scss",
-          "output": "app/ContentTypes/_TableStyles.css",
-          "name": "_TableStyles.scss",
           "category": "CSS",
           "autoCompile": true,
           "autoprefixer": false,
@@ -266,80 +440,10 @@
           "customOutput": false,
           "imported": true,
           "parents": [
+            "0115b650",
+            "cd1513b7",
             "b4144c5e"
           ],
-          "type": "sass"
-        },
-        "37ab0c91": {
-          "id": "37ab0c91",
-          "path": "app/ContentTypes/_hero.scss",
-          "output": "app/ContentTypes/_hero.css",
-          "name": "_hero.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "7263355e": {
-          "id": "7263355e",
-          "path": "app/ContentTypes/_navmenu.scss",
-          "output": "app/ContentTypes/_navmenu.css",
-          "name": "_navmenu.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "5ec38b25": {
-          "id": "5ec38b25",
-          "path": "app/ContentTypes/_newsroom.scss",
-          "output": "app/ContentTypes/_newsroom.css",
-          "name": "_newsroom.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "ab5ed3ce": {
-          "id": "ab5ed3ce",
-          "path": "app/ContentTypes/_oldhomepage.scss",
-          "output": "app/ContentTypes/_oldhomepage.css",
-          "name": "_oldhomepage.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
           "type": "sass"
         },
         "950e343b": {
@@ -348,7 +452,7 @@
           "output": "app/ContentTypes/_panel.css",
           "name": "_panel.scss",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -356,8 +460,11 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "0115b650",
+            "cd1513b7"
+          ],
           "type": "sass"
         },
         "3c8daf7b": {
@@ -366,7 +473,7 @@
           "output": "app/ContentTypes/_stylestoimport.css",
           "name": "_stylestoimport.scss",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -374,8 +481,11 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "0115b650",
+            "cd1513b7"
+          ],
           "type": "sass"
         },
         "5f973d90": {
@@ -394,6 +504,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
+            "0115b650",
+            "cd1513b7",
             "b4144c5e"
           ],
           "type": "sass"
@@ -414,46 +526,17 @@
           "customOutput": false,
           "imported": true,
           "parents": [
+            "0115b650",
+            "cd1513b7",
             "b4144c5e"
           ],
           "type": "sass"
         },
-        "06456fba": {
-          "id": "06456fba",
-          "path": "app/ContentTypes/content.scss",
-          "output": "app/ContentTypes/content.css",
-          "name": "content.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "d28aa1c9": {
-          "id": "d28aa1c9",
-          "path": "media/assets/msudenver_logo.png",
-          "output": "media/assets/msudenver_logo.png",
-          "name": "msudenver_logo.png",
-          "category": "IMAGE",
-          "size": 8562,
-          "type": "png",
-          "initialSize": 8562,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "8a21f0ba": {
-          "id": "8a21f0ba",
-          "path": "home2016_1.css",
-          "output": "home2016_1-dist.css",
-          "name": "home2016_1.css",
+        "b12960d9": {
+          "id": "b12960d9",
+          "path": "app/_presspage.css",
+          "output": "app/_presspage-dist.css",
+          "name": "_presspage.css",
           "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
@@ -464,44 +547,6 @@
           "imported": false,
           "parents": [],
           "type": "css"
-        },
-        "28406d04": {
-          "id": "28406d04",
-          "path": "home2016.css",
-          "output": "home2016-dist.css",
-          "name": "home2016.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "261764a5": {
-          "id": "261764a5",
-          "path": "springhome_index_060816.html",
-          "output": "springhome_index_060816.html",
-          "name": "springhome_index_060816.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "3f2018e1": {
-          "id": "3f2018e1",
-          "path": "springhome_index.html",
-          "output": "springhome_index.html",
-          "name": "springhome_index.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
         }
       },
       "deploymentHistory": {},
