adds the 1column layout

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -547,9 +547,153 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "4f1e2dd6": {
+          "id": "4f1e2dd6",
+          "path": "1column.html",
+          "output": "1column.html",
+          "name": "1column.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
-      "deploymentHistory": {},
+      "deploymentHistory": {
+        "43626724": {
+          "size": 44882,
+          "date": "2016-06-15T22:50:06.098Z"
+        },
+        "4f1e2dd6": {
+          "size": 16082,
+          "date": "2016-06-15T22:50:03.643Z"
+        },
+        "bf2493a7": {
+          "size": 19937,
+          "date": "2016-06-15T22:50:03.862Z"
+        },
+        "c5119d58": {
+          "size": 24090,
+          "date": "2016-06-15T22:50:04.106Z"
+        },
+        "28406d04": {
+          "size": 19762,
+          "date": "2016-06-15T22:50:04.323Z"
+        },
+        "8a21f0ba": {
+          "size": 18855,
+          "date": "2016-06-15T22:50:04.503Z"
+        },
+        "abf837a4": {
+          "size": 44935,
+          "date": "2016-06-15T22:50:04.689Z"
+        },
+        "306dc1b3": {
+          "size": 23145,
+          "date": "2016-06-15T22:50:04.882Z"
+        },
+        "8e525fc9": {
+          "size": 23929,
+          "date": "2016-06-15T22:50:05.158Z"
+        },
+        "3f2018e1": {
+          "size": 26904,
+          "date": "2016-06-15T22:50:05.450Z"
+        },
+        "261764a5": {
+          "size": 27329,
+          "date": "2016-06-15T22:50:05.646Z"
+        },
+        "b4144c5e": {
+          "size": 7905,
+          "date": "2016-06-15T22:50:05.845Z"
+        },
+        "0115b650": {
+          "size": 583,
+          "date": "2016-06-15T22:50:06.343Z"
+        },
+        "b12960d9": {
+          "size": 25430,
+          "date": "2016-06-15T22:50:06.592Z"
+        },
+        "cd1513b7": {
+          "size": 456,
+          "date": "2016-06-15T22:50:06.808Z"
+        },
+        "ced83014": {
+          "size": 6670,
+          "date": "2016-06-15T22:50:07.045Z"
+        },
+        "79258a5d": {
+          "size": 1047,
+          "date": "2016-06-15T22:50:07.255Z"
+        },
+        "08fd0c18": {
+          "size": 10107,
+          "date": "2016-06-15T22:50:07.456Z"
+        },
+        "948619a6": {
+          "size": 1332,
+          "date": "2016-06-15T22:50:07.692Z"
+        },
+        "9398d1e2": {
+          "size": 3303,
+          "date": "2016-06-15T22:50:07.907Z"
+        },
+        "84651ba5": {
+          "size": 563,
+          "date": "2016-06-15T22:50:08.136Z"
+        },
+        "37ab0c91": {
+          "size": 431,
+          "date": "2016-06-15T22:50:08.339Z"
+        },
+        "7263355e": {
+          "size": 4712,
+          "date": "2016-06-15T22:50:08.549Z"
+        },
+        "5ec38b25": {
+          "size": 971,
+          "date": "2016-06-15T22:50:08.779Z"
+        },
+        "ab5ed3ce": {
+          "size": 2786,
+          "date": "2016-06-15T22:50:08.991Z"
+        },
+        "950e343b": {
+          "size": 379,
+          "date": "2016-06-15T22:50:09.212Z"
+        },
+        "3c8daf7b": {
+          "size": 8355,
+          "date": "2016-06-15T22:50:09.428Z"
+        },
+        "5f973d90": {
+          "size": 5051,
+          "date": "2016-06-15T22:50:09.654Z"
+        },
+        "5dce72af": {
+          "size": 3793,
+          "date": "2016-06-15T22:50:09.932Z"
+        },
+        "06456fba": {
+          "size": 1167,
+          "date": "2016-06-15T22:50:10.277Z"
+        },
+        "d28aa1c9": {
+          "size": 8562,
+          "date": "2016-06-15T22:50:10.514Z"
+        },
+        "9230a169": {
+          "size": 623905,
+          "date": "2016-06-15T22:50:10.778Z"
+        },
+        "0d537d8c": {
+          "size": 145708,
+          "date": "2016-06-15T22:50:11.031Z"
+        }
+      },
       "config": {
         "watch": "",
         "liveRefresh": true,
@@ -571,18 +715,18 @@
           "enable": true
         },
         "deployment": {
-          "ftpHost": "",
+          "ftpHost": "147.153.144.246",
           "ftpPort": "21",
           "ftpUsePrivateKey": false,
           "ftpPrivateKey": "",
-          "ftpRemotePath": "",
+          "ftpRemotePath": "/web",
           "ftpUserName": "",
           "ftpPassword": "",
           "ftpType": "FTP",
-          "ftpSecure": false,
-          "ftpUploadOnModify": false,
+          "ftpSecure": true,
+          "ftpUploadOnModify": true,
           "ftpRefreshAfterUpload": false,
-          "ignorePreprocessableFiles": true,
+          "ignorePreprocessableFiles": false,
           "copyPath": "Prepros Build",
           "excludePatterns": ".map, Prepros Build, config.rb, prepros.cfg, node_modules, .git, .idea, .sass-cache, .hg, .svn, .cache, .DS_Store, bower_components"
         },
