Moves mainBlueNavigation to own scss

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -305,24 +305,6 @@
           ],
           "type": "sass"
         },
-        "0115b650": {
-          "id": "0115b650",
-          "path": "app/_main2016.scss",
-          "output": "main2016.css",
-          "name": "_main2016.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": true,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
         "79258a5d": {
           "id": "79258a5d",
           "path": "app/ContentTypes/_callstoaction.scss",
@@ -339,8 +321,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "b4144c5e",
-            "cd1513b7"
+            "b4144c5e"
           ],
           "type": "sass"
         },
@@ -359,6 +340,24 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "0115b650": {
+          "id": "0115b650",
+          "path": "app/_main2016.scss",
+          "output": "main2016.css",
+          "name": "_main2016.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
         },
         "cd1513b7": {
           "id": "cd1513b7",
@@ -414,9 +413,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
+            "0115b650",
             "cd1513b7",
-            "b4144c5e",
-            "0115b650"
+            "b4144c5e"
           ],
           "type": "sass"
         },
@@ -436,8 +435,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "cd1513b7",
-            "0115b650"
+            "0115b650",
+            "cd1513b7"
           ],
           "type": "sass"
         },
@@ -457,8 +456,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "cd1513b7",
-            "0115b650"
+            "0115b650",
+            "cd1513b7"
           ],
           "type": "sass"
         },
@@ -478,9 +477,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
+            "0115b650",
             "cd1513b7",
-            "b4144c5e",
-            "0115b650"
+            "b4144c5e"
           ],
           "type": "sass"
         },
@@ -500,9 +499,29 @@
           "customOutput": false,
           "imported": true,
           "parents": [
+            "0115b650",
             "cd1513b7",
-            "b4144c5e",
-            "0115b650"
+            "b4144c5e"
+          ],
+          "type": "sass"
+        },
+        "321f9996": {
+          "id": "321f9996",
+          "path": "app/ContentTypes/_mainBlueNavigation.scss",
+          "output": "app/ContentTypes/_mainBlueNavigation.css",
+          "name": "_mainBlueNavigation.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b4144c5e"
           ],
           "type": "sass"
         }
