adds original logo

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -524,6 +524,19 @@
             "b4144c5e"
           ],
           "type": "sass"
+        },
+        "c4301252": {
+          "id": "c4301252",
+          "path": "media/assets/MSU-Denverlogo_white.png",
+          "output": "media/assets/MSU-Denverlogo_white.png",
+          "name": "MSU-Denverlogo_white.png",
+          "category": "IMAGE",
+          "size": 14567,
+          "type": "png",
+          "initialSize": 14567,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
