updates the background color

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -537,6 +537,22 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "5f32df2d": {
+          "id": "5f32df2d",
+          "path": "home2016-test.css",
+          "output": "home2016-test-dist.css",
+          "name": "home2016-test.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
