published Homepage after 50th

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -511,7 +511,7 @@
           "output": "app/ContentTypes/_mainBlueNavigation.css",
           "name": "_mainBlueNavigation.scss",
           "category": "CSS",
-          "autoCompile": false,
+          "autoCompile": true,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -519,10 +519,8 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "b4144c5e"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "sass"
         },
         "c4301252": {
@@ -537,22 +535,6 @@
           "optimized": false,
           "height": 0,
           "width": 0
-        },
-        "5f32df2d": {
-          "id": "5f32df2d",
-          "path": "home2016-test.css",
-          "output": "home2016-test-dist.css",
-          "name": "home2016-test.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
         }
       },
       "deploymentHistory": {},
