--- a/prepros.cfg
+++ b/prepros.cfg
@@ -511,7 +511,7 @@
           "output": "app/ContentTypes/_mainBlueNavigation.css",
           "name": "_mainBlueNavigation.scss",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -519,9 +519,81 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b4144c5e"
+          ],
+          "type": "sass"
+        },
+        "5557b413": {
+          "id": "5557b413",
+          "path": "50-years.css",
+          "output": "50-years-dist.css",
+          "name": "50-years.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "sass"
+          "type": "css"
+        },
+        "1e9067eb": {
+          "id": "1e9067eb",
+          "path": "academic-programs.html",
+          "output": "academic-programs.html",
+          "name": "academic-programs.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "5f32df2d": {
+          "id": "5f32df2d",
+          "path": "home2016-test.css",
+          "output": "home2016-test-dist.css",
+          "name": "home2016-test.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "8a21f0ba": {
+          "id": "8a21f0ba",
+          "path": "home2016_1.css",
+          "output": "home2016_1-dist.css",
+          "name": "home2016_1.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "261764a5": {
+          "id": "261764a5",
+          "path": "springhome_index_060816.html",
+          "output": "springhome_index_060816.html",
+          "name": "springhome_index_060816.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         },
         "c4301252": {
           "id": "c4301252",
