adds SiteHeader.scss

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -120,17 +120,6 @@
           "parents": [],
           "type": "html"
         },
-        "306dc1b3": {
-          "id": "306dc1b3",
-          "path": "newsroom.html",
-          "output": "newsroom.html",
-          "name": "newsroom.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "d28aa1c9": {
           "id": "d28aa1c9",
           "path": "media/assets/msudenver_logo.png",
@@ -240,8 +229,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "0115b650",
-            "cd1513b7"
+            "0115b650"
           ],
           "type": "sass"
         },
@@ -261,8 +249,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "0115b650",
-            "cd1513b7"
+            "0115b650"
           ],
           "type": "sass"
         },
@@ -300,8 +287,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "0115b650",
-            "cd1513b7"
+            "0115b650"
           ],
           "type": "sass"
         },
@@ -325,45 +311,11 @@
           ],
           "type": "sass"
         },
-        "8e525fc9": {
-          "id": "8e525fc9",
-          "path": "presspage.css",
-          "output": "presspage-dist.css",
-          "name": "presspage.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "0115b650": {
           "id": "0115b650",
           "path": "app/_main2016.scss",
           "output": "main2016.css",
           "name": "_main2016.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": true,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "cd1513b7": {
-          "id": "cd1513b7",
-          "path": "app/_presspage.scss",
-          "output": "presspage.css",
-          "name": "_presspage.scss",
           "category": "CSS",
           "autoCompile": true,
           "autoprefixer": false,
@@ -414,7 +366,6 @@
           "imported": true,
           "parents": [
             "0115b650",
-            "cd1513b7",
             "b4144c5e"
           ],
           "type": "sass"
@@ -435,8 +386,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "0115b650",
-            "cd1513b7"
+            "0115b650"
           ],
           "type": "sass"
         },
@@ -456,8 +406,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "0115b650",
-            "cd1513b7"
+            "0115b650"
           ],
           "type": "sass"
         },
@@ -478,7 +427,6 @@
           "imported": true,
           "parents": [
             "0115b650",
-            "cd1513b7",
             "b4144c5e"
           ],
           "type": "sass"
@@ -500,7 +448,6 @@
           "imported": true,
           "parents": [
             "0115b650",
-            "cd1513b7",
             "b4144c5e"
           ],
           "type": "sass"
@@ -607,6 +554,26 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "9c397585": {
+          "id": "9c397585",
+          "path": "app/ContentTypes/_SiteHeader.scss",
+          "output": "app/ContentTypes/_SiteHeader.css",
+          "name": "_SiteHeader.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
