renamed springhome_index.html to homepage.html

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,17 +9,6 @@
       "name": "Homepage-Spring-Update",
       "path": "",
       "files": {
-        "3f2018e1": {
-          "id": "3f2018e1",
-          "path": "springhome_index.html",
-          "output": "springhome_index.html",
-          "name": "springhome_index.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "c5119d58": {
           "id": "c5119d58",
           "path": "50years85kAlumni_bug.png",
@@ -557,6 +546,17 @@
             "0115b650"
           ],
           "type": "sass"
+        },
+        "2c485aa8": {
+          "id": "2c485aa8",
+          "path": "homepage.html",
+          "output": "homepage.html",
+          "name": "homepage.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
